@@ -1,3 +1,10 @@
+Thu Jul 30 21:39:42 2009  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* compile.c (iseq_compile_each): fix stack consistency error.
+	  [ruby-core:24611]
+
+	* bootstraptest/test_method.rb: add tests for above.
+
 Thu Jul 30 18:39:39 2009  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* transcode.c: added check for frozen string for encode! (see Bug #1836)
